# ROS2-Race-Simulator

./: README.md
docs/: dev_validation.md  implementation_tasks.md  milestone1.md  multi_vehicle_design.md  race_completion_semantics.md  requirements.md  review_checklist.md  specification.md
docs/archive/: implementation_tasks.md
docs/design/: architecture.md  first_multi_vehicle_slice.md  message_boundary.md  multi_vehicle_runtime_model.md  pre_generalization_interface_boundary.md  race_manager_coordinator_api_boundary.md  race_state_completed_laps_current_semantics.md  race_state_completed_laps_future_handling.md
docs/process/: REVIEW_CONTEXT.md  dev_validation.md  review_checklist.md
docs/specs/: milestone1.md
docs/status/: HANDOFF_FOR_CHATGPT.md  PROJECT_STATUS.md
src/race_interfaces/: CMakeLists.txt  package.xml
src/race_interfaces/msg/: DriveCommand.msg  LapEvent.msg  RaceCommand.msg  RaceState.msg  VehicleRaceStatus.msg
src/race_track/: CMakeLists.txt  package.xml
src/race_track/config/: race_progress_demo.publisher.yaml  race_progress_demo_three_vehicle.publisher.yaml  sample_track.yaml
src/race_track/include/race_track/: completion_evaluator.hpp  demo_runtime_config.hpp  geometry.hpp  lap_event_assembler.hpp  progress_tracker.hpp  race_coordinator.hpp  race_state_assembler.hpp  single_vehicle_runtime.hpp  track_loader.hpp  track_model.hpp  track_validator.hpp  types.hpp  vehicle_race_status_assembler.hpp
src/race_track/launch/: race_progress_demo.launch.py
src/race_track/src/: completion_evaluator.cpp  demo_runtime_config.cpp  geometry.cpp  lap_event_assembler.cpp  progress_tracker.cpp  race_command_cli.cpp  race_coordinator.cpp  race_message_demo.cpp  race_progress_demo.cpp  race_progress_monitor.cpp  race_progress_publisher.cpp  race_state_assembler.cpp  single_vehicle_runtime.cpp  track_demo.cpp  track_loader.cpp  track_validator.cpp  vehicle_race_status_assembler.cpp
src/race_track/test/: test_completion_evaluator.cpp  test_demo_runtime_config.cpp  test_geometry.cpp  test_lap_event_assembler.cpp  test_progress_tracker.cpp  test_race_coordinator.cpp  test_race_progress_integration.cpp  test_race_state_assembler.cpp  test_single_vehicle_runtime.cpp  test_track_loader.cpp  test_track_validator.cpp  test_vehicle_race_status_assembler.cpp
